[gd_scene load_steps=6 format=2]

[ext_resource path="res://Economy/ShopItem.gd" type="Script" id=1]
[ext_resource path="res://UI/Frame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Plants/Peashooter/Peashooter_1.png" type="Texture" id=3]
[ext_resource path="res://UI/Cooldown.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/PlantInfo.tscn" type="PackedScene" id=5]

[node name="ShopItem" type="MarginContainer"]
margin_right = 32.0
margin_bottom = 44.0
rect_min_size = Vector2( 32, 44 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Frame" parent="." instance=ExtResource( 2 )]
margin_right = 32.0
margin_bottom = 44.0

[node name="PlantInfo" parent="Frame" instance=ExtResource( 5 )]
visible = false
anchor_bottom = 1.0
margin_left = 34.0
margin_right = 147.0
margin_bottom = 24.0
rect_scale = Vector2( 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 32.0
margin_bottom = 44.0
custom_constants/separation = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 32.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 10 )
text = "100"
align = 1
valign = 1

[node name="Cooldown" parent="." instance=ExtResource( 4 )]
margin_right = 32.0
margin_bottom = 44.0
nine_patch_stretch = true

[node name="Button" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="PlantCooldown" type="Timer" parent="."]

[node name="TooltipTimer" type="Timer" parent="."]

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="timeout" from="PlantCooldown" to="." method="_on_PlantCooldown_timeout"]
[connection signal="timeout" from="TooltipTimer" to="." method="_on_TooltipTimer_timeout"]
